tests/sources/should-not-compile/for-stupid.c
int x = 10;
int y = 0;

for (int i = 0; if (i < 10); i = i + 1)
{
    x = x + i;
}